--- a/chat/package.json
+++ b/chat/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.6",
     "oh-vue-icons": "^1.0.0-rc3",
     "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.0.6",
     "vue": "^3.5.13"
   },
   "devDependencies": {
